--- a/flex/03-flex-header-2/style.css
+++ b/flex/03-flex-header-2/style.css
@@ -12,6 +12,32 @@ body {
   background: white;
   border-bottom: 1px solid #ddd;
   box-shadow: 0 0 8px rgba(0,0,0,.1);
+  display: flex;
+  justify-content: space-between;
+}
+
+.logolinks {
+  display: flex;
+  align-items: center;
+  padding-left: 15px;
+}
+
+.logolinks ul {
+  display: flex;
+}
+
+.logolinks ul li {
+  padding-right: 15px;
+}
+
+.profilelinks {
+  display: flex;
+  align-items: center;
+  padding-right: 15px;
+}
+
+.notifications {
+  margin-right: 15px;
 }
 
 .profile-image {
